Bug 99155 - Crashes when clicking on Basic subcategory title in Exit custom animations
Summary: Crashes when clicking on Basic subcategory title in Exit custom animations
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All Linux (All)
: high major
Assignee: Julien Nabet
URL:
Whiteboard: target:5.2.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2016-04-08 12:07 UTC by Buovjaga
Modified: 2016-10-25 19:08 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
GDB trace of the crash (17.57 KB, text/plain)
2016-04-08 12:07 UTC, Buovjaga
Details
bt with debug symbols (8.29 KB, text/plain)
2016-04-10 06:27 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2016-04-08 12:07:29 UTC
Created attachment 124184 [details]
GDB trace of the crash

1. Write something in a text box and select the box
2. In the sidebar for custom animations, click the + Add button
3. Select category Exit
4. Click on the Basic subcategory title

Arch Linux 64-bit, KDE Plasma 5
Version: 5.2.0.0.alpha0+
Build ID: 9b0069c2833313ba9fab91f45edd354ba334f94b
CPU Threads: 8; OS Version: Linux 4.4; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Built on April 8th 2016
Comment 1 Buovjaga 2016-04-08 12:08:11 UTC
Bubli confirmed on IRC.
Comment 2 Julien Nabet 2016-04-10 06:27:42 UTC
Created attachment 124224 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.
I attached a bt with symbols.
Comment 3 Julien Nabet 2016-04-10 06:43:10 UTC
I submitted this patch on gerrit:
https://gerrit.libreoffice.org/#/c/23955/
Comment 4 Commit Notification 2016-04-10 07:16:08 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=683e0ee64ab546c1671999a1047f811584f434d3

tdf#99155: fix crash on clicking subcategory title in customanimations

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2016-04-10 07:28:34 UTC
Only present on master sources, so FIXED.