tdf#99155: fix crash on clicking subcategory title in customanimations

Change-Id: I87b8664366c44d80a3ad1b4062ccb99bb1cdb8b9